Added rate limiting service

--- a/appsettings.json
+++ b/appsettings.json
@@ -16,5 +16,8 @@
   "BasicAuth": {
     "Username": "admin",
     "Password": "SuperSecurePassword123"
+  },
+  "ApiKey": {
+    "X-API-KEY": "secret-api-key-123"
   }
 }
